--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,7 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-assets
   - jekyll-environment-variables
 paginate_path: "/aktuality/:num/"
 paginate: 11
