Záložka Senátní volby
Vytvořena záložka senátní volby s vlastní stránkou.
Vytvořen odkaz v hlavním menu na novou záložku.

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -19,6 +19,9 @@ main:
   - link: /komunalni-volby/
     name: Komunální volby
     match: komunalni-volby
+  - link: /senatni-volby/
+    name: Senátní volby
+    match: senatni-volby
   - link: /kontakt/
     name: Kontakt
     match: kontakt
