Tvorba založky senátní volby
-vytvořená stránka víte, že...
-úprava stránky ohlasy - zvětšení písma a apřidání ohlasů
-stránka senátní obvod - změna písma a vloženy dva obrázky (složka
assets/img/senat)
-stránka kandidát - úprava písma a vložení videa, vytvoření vlastního
boxu na odkazy
- úprava vytvořeného submenu

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -27,12 +27,15 @@ main:
         name: Kandidát
         match: senatni-volby
       - link: /senatni-volby/senatni-obvod/
-        name: Senátní Obvod
+        name: Senátní obvod
         match: senatni-obvod
       - link: /senatni-volby/dopisy/
-        name: Dopisy
+        name: Ohlasy
         match: dopisy
-     
+      - link: /senatni-volby/vite-ze/
+        name: Víte ,že ...
+        match: vite-ze
+
   - link: /kontakt/
     name: Kontakt
     match: kontakt
