Přidána stránka Ke stažení
 - soubor _config.yml: přidána složka ../assets/files k assets source
 - soubor menu.yml: vložení odkazu na stránku ke stažení do submenu
 - upravena stránka ke stažení
 - vloženy fotky omalovánek
 - vloženy pdf soubory s omalovánkami

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -35,6 +35,9 @@ main:
       - link: /senatni-volby/vite-ze/
         name: Víte ,že ...
         match: vite-ze
+      - link: /senatni-volby/ke-stazeni/
+        name: Ke stažení
+        match: ke-stazeni
 
   - link: /kontakt/
     name: Kontakt
