--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,7 @@ organization:
   contactUid: pavel.korizek
   email: pavel.korizek@pirati.cz
   phone: +420 777 237 635
-  address: |
-    Krnovská 12/9,
-    746 01 Opava
+  address: 
   residenceImg:
   mapLink: https://www.google.com/maps/place/Slezsk%C3%A9+pir%C3%A1tsk%C3%A9+centrum+(SlePiCe)/@49.9410212,17.8945704,17z/data=!3m1!4b1!4m5!3m4!1s0x4713d811a219e3bd:0xe21f6bf9f3190919!8m2!3d49.9410178!4d17.8967591
   redmineLink: https://redmine.pirati.cz/projects
